--- a/pom.xml
+++ b/pom.xml
@@ -3,111 +3,41 @@
 	<modelVersion>4.0.0</modelVersion>
 	
 	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
+		<groupId>edu.stanford.protege</groupId>
+		<artifactId>protege-parent</artifactId>
+		<version>5.0.0-beta-01-SNAPSHOT</version>
 	</parent>
 	
-	<groupId>edu.stanford.protege</groupId>
 	<artifactId>org.coode.owlviz</artifactId>
 	<version>4.1.3-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<name>OWLViz</name>
-    <description>A plug-in for the Protege ontology editor that provides a graphical representation of the class hierarchies in an OWL ontology.</description>
-	<url>http://protege.stanford.edu</url>
-	<organization>
-		<name>Stanford Center for Biomedical Informatics Research</name>
-		<url>http://bmir.stanford.edu/</url>
-	</organization>
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License</name>
-			<url>http://www.gnu.org/copyleft/lesser.html</url>
-		</license>
-	</licenses>
+    <description>A plug-in for the Protege Desktop ontology editor that provides a graphical representation of the class hierarchies in an OWL ontology.</description>
 
-	<developers>
-		<developer>
-			<name>Matthew Horridge</name>
-			<email>matthew.horridge@stanford.edu</email>
-		</developer>
-		<developer>
-			<name>Nick Drummond</name>
-			<email>nickdrummond@yahoo.com</email>
-		</developer>
-		<developer>
-			<name>Timothy Redmond</name>
-			<email>tredmond@stanford.edu</email>
-		</developer>
-		<developer>
-			<name>Tania Tudorache</name>
-			<email>tudorache@stanford.edu</email>
-		</developer>
-		<developer>
-			<name>Jennifer Vendetti</name>
-			<email>vendetti@stanford.edu</email>
-		</developer>
-	</developers>
-	
-	<mailingLists>
-		<mailingList>
-			<name>p4-feedback</name>
-			<subscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</subscribe>
-			<unsubscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</unsubscribe>
-			<post>p4-feedback@lists.stanford.edu</post>
-			<archive>https://mailman.stanford.edu/pipermail/p4-feedback/</archive>
-			<otherArchives>
-				<otherArchive>http://protege-ontology-editor-knowledge-acquisition-system.136.n4.nabble.com/Protege-OWL-4-x-Support-f21363.html</otherArchive>
-			</otherArchives>
-		</mailingList>
-	</mailingLists>
-	
 	<scm>
 		<connection>scm:svn:http://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</connection>
 		<developerConnection>scm:svn:https://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</developerConnection>
 		<url>http://smi-protege.stanford.edu/svn/protege4/plugins/org.coode.owlviz/</url>
 	</scm>
 
-    <properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
 	<dependencies>
-		<dependency>
-            <groupId>org.apache.felix</groupId>
-            <artifactId>org.apache.felix.main</artifactId>
-            <version>4.0.3</version>
-        </dependency>
-
-		<dependency>
-			<groupId>org.eclipse.equinox</groupId>
-			<artifactId>org.eclipse.equinox.registry</artifactId>
-			<version>3.5.0.v20100503</version>
-		</dependency>
-      		
         <dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.common</artifactId>
-			<version>4.3.0</version>
+			<version>${project.parent.version}</version>
         </dependency>
         
 		<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.editor.core.application</artifactId>
-			<version>4.3.0</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.editor.owl</artifactId>
-			<version>4.3.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>net.sourceforge.owlapi</groupId>
-			<artifactId>owlapi-distribution</artifactId>
-			<version>3.4.3</version>
+			<version>${project.parent.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -121,10 +51,15 @@
 				<configuration>
 					<instructions>
 						<Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>
-						<Bundle-ClassPath>.,{maven-dependencies}</Bundle-ClassPath>
+						<Bundle-ClassPath>., {maven-dependencies}</Bundle-ClassPath>
 						<Bundle-SymbolicName>org.coode.owlviz;singleton:=true</Bundle-SymbolicName>
 						<Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
-						<Import-Package>org.eclipse.core.runtime;registry=split, org.protege.editor.owl.ui, *</Import-Package>
+						<Import-Package>
+							org.eclipse.core.runtime;registry=split, 
+							org.protege.editor.owl.ui, 
+							org.apache.log4j.*;version="[1.2,2)",
+							*
+						</Import-Package>
 						<Include-Resource>plugin.xml, {maven-resources}</Include-Resource>
 					</instructions>
 					<executions>
@@ -138,71 +73,6 @@
                 </executions>
               </configuration>
             </plugin>
-
-            <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-            </plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.2.1</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.9</version>
-				<executions>
-					<execution>
-						<id>attach-javadocs</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
+        </plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>sign-artifacts</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<version>1.4</version>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
