--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
 					<instructions>
 						<Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>
 						<Bundle-ClassPath>., {maven-dependencies}</Bundle-ClassPath>
-						<Bundle-SymbolicName>org.coode.owlviz;singleton:=true</Bundle-SymbolicName>
+						<Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
 						<Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
 						<Import-Package>
 							org.eclipse.core.runtime;registry=split, 
