--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<groupId>edu.stanford.protege</groupId>
 	<artifactId>org.coode.owlviz</artifactId>
-	<version>4.1.4-SNAPSHOT</version>
+	<version>4.1.4</version>
 	<packaging>bundle</packaging>
 
 	<name>OWLViz</name>
@@ -56,9 +56,9 @@
 	</mailingLists>
 	
 	<scm>
-		<connection>scm:svn:http://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</connection>
-		<developerConnection>scm:svn:https://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</developerConnection>
-		<url>http://smi-protege.stanford.edu/svn/protege4/plugins/org.coode.owlviz/</url>
+		<connection>scm:svn:http://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/tags/org.coode.owlviz-4.1.4</connection>
+		<developerConnection>scm:svn:https://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/tags/org.coode.owlviz-4.1.4</developerConnection>
+		<url>http://smi-protege.stanford.edu/svn/protege4/plugins/org.coode.owlviz/tags/org.coode.owlviz-4.1.4</url>
 	</scm>
 
 	<dependencies>
