--- a/pom.xml
+++ b/pom.xml
@@ -1,122 +1,130 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	
-	<parent>
-		<groupId>org.sonatype.oss</groupId>
-		<artifactId>oss-parent</artifactId>
-		<version>7</version>
-	</parent>
-	
-	<groupId>edu.stanford.protege</groupId>
-	<artifactId>org.coode.owlviz</artifactId>
-	<version>4.1.5-SNAPSHOT</version>
-	<packaging>bundle</packaging>
+    <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+    
+    <groupId>edu.stanford.protege</groupId>
+    <artifactId>org.coode.owlviz</artifactId>
+    <version>4.1.5-SNAPSHOT</version>
+    <packaging>bundle</packaging>
 
-	<name>OWLViz</name>
+    <name>OWLViz</name>
     <description>A plug-in for the Protege Desktop ontology editor that provides a graphical representation of the class hierarchies in an OWL ontology.</description>
     <url>http://protegewiki.stanford.edu/wiki/OWLViz</url>
-	<licenses>
-		<license>
-			<name>GNU Lesser General Public License</name>
-			<url>http://www.gnu.org/copyleft/lesser.html</url>
-		</license>
-	</licenses>
-	
-	<developers>
-		<developer>
-			<name>Matthew Horridge</name>
-			<email>matthew.horridge@stanford.edu</email>
-		</developer>
-		<developer>
-			<name>Timothy Redmond</name>
-			<email>tredmond@stanford.edu</email>
-		</developer>
-		<developer>
-			<name>Tania Tudorache</name>
-			<email>tudorache@stanford.edu</email>
-		</developer>
-		<developer>
-			<name>Jennifer Vendetti</name>
-			<email>vendetti@stanford.edu</email>
-		</developer>
-	</developers>
-	
-	<mailingLists>
-		<mailingList>
-			<name>p4-feedback</name>
-			<subscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</subscribe>
-			<unsubscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</unsubscribe>
-			<post>p4-feedback@lists.stanford.edu</post>
-			<archive>https://mailman.stanford.edu/pipermail/p4-feedback/</archive>
-			<otherArchives>
-				<otherArchive>http://protege-ontology-editor-knowledge-acquisition-system.136.n4.nabble.com/Protege-OWL-4-x-Support-f21363.html</otherArchive>
-			</otherArchives>
-		</mailingList>
-	</mailingLists>
-	
-	<scm>
-		<connection>scm:svn:http://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</connection>
-		<developerConnection>scm:svn:https://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</developerConnection>
-		<url>http://smi-protege.stanford.edu/svn/protege4/plugins/org.coode.owlviz/</url>
-	</scm>
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License</name>
+            <url>http://www.gnu.org/copyleft/lesser.html</url>
+        </license>
+    </licenses>
+    
+    <developers>
+        <developer>
+            <name>Matthew Horridge</name>
+            <email>matthew.horridge@stanford.edu</email>
+        </developer>
+        <developer>
+            <name>Timothy Redmond</name>
+            <email>tredmond@stanford.edu</email>
+        </developer>
+        <developer>
+            <name>Tania Tudorache</name>
+            <email>tudorache@stanford.edu</email>
+        </developer>
+        <developer>
+            <name>Jennifer Vendetti</name>
+            <email>vendetti@stanford.edu</email>
+        </developer>
+    </developers>
+    
+    <mailingLists>
+        <mailingList>
+            <name>p4-feedback</name>
+            <subscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</subscribe>
+            <unsubscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</unsubscribe>
+            <post>p4-feedback@lists.stanford.edu</post>
+            <archive>https://mailman.stanford.edu/pipermail/p4-feedback/</archive>
+            <otherArchives>
+                <otherArchive>http://protege-ontology-editor-knowledge-acquisition-system.136.n4.nabble.com/Protege-OWL-4-x-Support-f21363.html</otherArchive>
+            </otherArchives>
+        </mailingList>
+    </mailingLists>
+    
+    <scm>
+        <connection>scm:svn:http://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</connection>
+        <developerConnection>scm:svn:https://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</developerConnection>
+        <url>http://smi-protege.stanford.edu/svn/protege4/plugins/org.coode.owlviz/</url>
+    </scm>
 
-	<dependencies>
-		<dependency>
-			<groupId>edu.stanford.protege</groupId>
-			<artifactId>org.protege.editor.core.application</artifactId>
-			<version>4.3.0</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>edu.stanford.protege</groupId>
-			<artifactId>org.protege.editor.owl</artifactId>
-			<version>4.3.0</version>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>edu.stanford.protege</groupId>
+            <artifactId>org.protege.editor.core.application</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>edu.stanford.protege</groupId>
+            <artifactId>org.protege.editor.owl</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+    </dependencies>
 
-	<build>
-		<plugins>
+    <build>
+        <plugins>
             <plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>
-						<Bundle-ClassPath>., {maven-dependencies}</Bundle-ClassPath>
-						<Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
-						<Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
-						<Import-Package>
-							org.apache.log4j.*;version="[1.2,2)",
-							org.eclipse.core.runtime;registry=split, 
-							org.protege.editor.core.*;version="4.3", <!-- equivalent to [4.3,infinity) -->
-							org.protege.editor.owl.*;version="4.3",
-							org.protege.editor.owl.ui;version="4.3",
-							*
-						</Import-Package>
-						<Include-Resource>plugin.xml, {maven-resources}</Include-Resource>
-					</instructions>
-					<executions>
-						<execution>
-							<id>bundle-manifest</id>
-							<phase>install</phase>
-							<goals>    
-								<goal>manifest</goal>
-							</goals>   
-					</execution>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.0</version>
+              <configuration>
+                <source>1.6</source>
+                <target>1.6</target>
+              </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.3.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>
+                        <Bundle-ClassPath>., {maven-dependencies}</Bundle-ClassPath>
+                        <Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
+                        <Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
+                        <Import-Package>
+                            org.apache.log4j.*;version="[1.2,2)",
+                            org.eclipse.core.runtime;registry=split, 
+                            org.protege.editor.core.*;version="4.3", <!-- equivalent to [4.3,infinity) -->
+                            org.protege.editor.owl.*;version="4.3",
+                            org.protege.editor.owl.ui;version="4.3",
+                            *
+                        </Import-Package>
+                        <Include-Resource>plugin.xml, {maven-resources}</Include-Resource>
+                    </instructions>
+                    <executions>
+                        <execution>
+                            <id>bundle-manifest</id>
+                            <phase>install</phase>
+                            <goals>    
+                                <goal>manifest</goal>
+                            </goals>   
+                    </execution>
                 </executions>
               </configuration>
             </plugin>
-            
-			<plugin>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<pde>true</pde>
-				</configuration>
-			</plugin>
+            <plugin>
+              <artifactId>maven-eclipse-plugin</artifactId>
+              <version>2.9</version>
+              <configuration>
+                <pde>true</pde>
+              </configuration>
+            </plugin>
         </plugins>
-	</build>
+    </build>
 </project>
