--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
     </parent>
-    
+
     <groupId>edu.stanford.protege</groupId>
     <artifactId>org.coode.owlviz</artifactId>
     <version>4.1.5-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>OWLViz</name>
-    <description>A plug-in for the Protege Desktop ontology editor that provides a graphical representation of the class hierarchies in an OWL ontology.</description>
+    <description>A plug-in for the Protege Desktop ontology editor that provides a graphical representation of the class
+        hierarchies in an OWL ontology.
+    </description>
     <url>http://protegewiki.stanford.edu/wiki/OWLViz</url>
     <licenses>
         <license>
@@ -22,7 +25,7 @@
             <url>http://www.gnu.org/copyleft/lesser.html</url>
         </license>
     </licenses>
-    
+
     <developers>
         <developer>
             <name>Matthew Horridge</name>
@@ -41,7 +44,7 @@
             <email>vendetti@stanford.edu</email>
         </developer>
     </developers>
-    
+
     <mailingLists>
         <mailingList>
             <name>p4-feedback</name>
@@ -50,15 +53,18 @@
             <post>p4-feedback@lists.stanford.edu</post>
             <archive>https://mailman.stanford.edu/pipermail/p4-feedback/</archive>
             <otherArchives>
-                <otherArchive>http://protege-ontology-editor-knowledge-acquisition-system.136.n4.nabble.com/Protege-OWL-4-x-Support-f21363.html</otherArchive>
+                <otherArchive>
+                    http://protege-ontology-editor-knowledge-acquisition-system.136.n4.nabble.com/Protege-OWL-4-x-Support-f21363.html
+                </otherArchive>
             </otherArchives>
         </mailingList>
     </mailingLists>
-    
+
     <scm>
-        <connection>scm:svn:http://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</connection>
-        <developerConnection>scm:svn:https://smi-protege.stanford.edu/repos/protege/protege4/plugins/org.coode.owlviz/trunk/</developerConnection>
-        <url>http://smi-protege.stanford.edu/svn/protege4/plugins/org.coode.owlviz/</url>
+        <connection>scm:git:git@github.com:protegeproject/owlviz.git</connection>
+        <developerConnection>scm:git:git@github.com:protegeproject/owlviz.git</developerConnection>
+        <url>https://github.com/protegeproject/owlviz</url>
+        <tag>HEAD</tag>
     </scm>
 
     <dependencies>
@@ -67,7 +73,7 @@
             <artifactId>org.protege.editor.core.application</artifactId>
             <version>5.0.0-beta-15</version>
         </dependency>
-        
+
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>org.protege.editor.owl</artifactId>
@@ -78,13 +84,13 @@
     <build>
         <plugins>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <version>3.0</version>
-              <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
-              </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.0</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
@@ -99,7 +105,7 @@
                         <Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
                         <Import-Package>
                             org.apache.log4j.*;version="[1.2,2)",
-                            org.eclipse.core.runtime;registry=split, 
+                            org.eclipse.core.runtime;registry=split,
                             org.protege.editor.core.*;version="4.3", <!-- equivalent to [4.3,infinity) -->
                             org.protege.editor.owl.*;version="4.3",
                             org.protege.editor.owl.ui;version="4.3",
@@ -111,19 +117,19 @@
                         <execution>
                             <id>bundle-manifest</id>
                             <phase>install</phase>
-                            <goals>    
+                            <goals>
                                 <goal>manifest</goal>
-                            </goals>   
-                    </execution>
-                </executions>
-              </configuration>
+                            </goals>
+                        </execution>
+                    </executions>
+                </configuration>
             </plugin>
             <plugin>
-              <artifactId>maven-eclipse-plugin</artifactId>
-              <version>2.9</version>
-              <configuration>
-                <pde>true</pde>
-              </configuration>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <pde>true</pde>
+                </configuration>
             </plugin>
         </plugins>
     </build>
