--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>edu.stanford.protege</groupId>
     <artifactId>org.coode.owlviz</artifactId>
-    <version>4.1.5</version>
+    <version>4.1.6-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
     <name>OWLViz</name>
