--- a/pom.xml
+++ b/pom.xml
@@ -70,13 +70,13 @@
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>org.protege.editor.core.application</artifactId>
-            <version>5.0.0-beta-15</version>
+            <version>5.0.0-beta-18-SNAPSHOT</version>
         </dependency>
 
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>org.protege.editor.owl</artifactId>
-            <version>5.0.0-beta-15</version>
+            <version>5.0.0-beta-18-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
