--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# Maven
 target/
-.idea/
+
+# Eclipse
+.classpath
+.project
+.settings/
+META-INF/
+
+#intelliJ
+*.iws
+*.ipr
+.idea
 *.iml
+build/
