--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,13 @@
 
     <groupId>edu.stanford.protege</groupId>
     <artifactId>org.coode.owlviz</artifactId>
-    <version>4.1.6-SNAPSHOT</version>
+    <version>4.2</version>
     <packaging>bundle</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+   
     <name>OWLViz</name>
     <description>A plug-in for the Protege Desktop ontology editor that provides a graphical representation of the class
         hierarchies in an OWL ontology.
@@ -45,16 +49,27 @@
     </developers>
 
     <mailingLists>
+        <!-- For end users with questions about how to use the DL Query tab. -->
         <mailingList>
-            <name>p4-feedback</name>
-            <subscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</subscribe>
-            <unsubscribe>http://mailman.stanford.edu/mailman/listinfo/p4-feedback</unsubscribe>
-            <post>p4-feedback@lists.stanford.edu</post>
-            <archive>https://mailman.stanford.edu/pipermail/p4-feedback/</archive>
+            <name>protege-user</name>
+            <subscribe>https://mailman.stanford.edu/mailman/listinfo/protege-user</subscribe>
+            <unsubscribe>https://mailman.stanford.edu/mailman/listinfo/protege-user</unsubscribe>
+            <post>protege-user@lists.stanford.edu</post>
+            <archive>http://protege-project.136.n4.nabble.com/</archive>
             <otherArchives>
-                <otherArchive>
-                    http://protege-ontology-editor-knowledge-acquisition-system.136.n4.nabble.com/Protege-OWL-4-x-Support-f21363.html
-                </otherArchive>
+                <otherArchive>https://mailman.stanford.edu/pipermail/protege-user/</otherArchive>
+            </otherArchives>
+        </mailingList>
+
+        <!-- For developers.  -->
+        <mailingList>
+            <name>protege-dev</name>
+            <subscribe>https://mailman.stanford.edu/mailman/listinfo/protege-dev</subscribe>
+            <unsubscribe>https://mailman.stanford.edu/mailman/listinfo/protege-dev</unsubscribe>
+            <post>protege-dev@lists.stanford.edu</post>
+            <archive>http://protege-project.136.n4.nabble.com/</archive>
+            <otherArchives>
+                <otherArchive>https://mailman.stanford.edu/pipermail/protege-dev/</otherArchive>
             </otherArchives>
         </mailingList>
     </mailingLists>
@@ -69,13 +84,17 @@
     <dependencies>
         <dependency>
             <groupId>edu.stanford.protege</groupId>
-            <artifactId>org.protege.editor.core.application</artifactId>
+            <artifactId>protege-common</artifactId>
             <version>5.0.0-beta-18-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>edu.stanford.protege</groupId>
-            <artifactId>org.protege.editor.owl</artifactId>
+            <artifactId>protege-editor-core</artifactId>
+            <version>5.0.0-beta-18-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.stanford.protege</groupId>
+            <artifactId>protege-editor-owl</artifactId>
             <version>5.0.0-beta-18-SNAPSHOT</version>
         </dependency>
     </dependencies>
@@ -85,10 +104,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>3.3</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -127,20 +146,20 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.3.7</version>
+                <version>2.5.3</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Bundle-Activator>org.protege.editor.owl.ProtegeOWL</Bundle-Activator>
-                        <Bundle-ClassPath>., {maven-dependencies}</Bundle-ClassPath>
+                        <Bundle-ClassPath>.</Bundle-ClassPath>
                         <Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
                         <Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
                         <Import-Package>
                             org.apache.log4j.*;version="[1.2,2)",
-                            org.eclipse.core.runtime;registry=split,
-                            org.protege.editor.core.*;version="5.0.0", <!-- equivalent to [4.3,infinity) -->
+                            org.protege.editor.core.*;version="5.0.0", <!-- equivalent to [5.0.0,infinity) -->
                             org.protege.editor.owl.*;version="5.0.0",
                             org.protege.editor.owl.ui;version="5.0.0",
+                            org.semanticweb.owlapi.*;version="[4.1.2,5.0.0)",
                             *
                         </Import-Package>
                         <Include-Resource>plugin.xml, {maven-resources}</Include-Resource>
