--- a/update-info/protege-5/update.properties
+++ b/update-info/protege-5/update.properties
@@ -1,7 +1,7 @@
 name=OWLViz
-id=org.coode.owlviz
+id=owlviz
 version=5.0.0
-download=https://github.com/protegeproject/owlviz/releases/download/v5.0.0/org.coode.owlviz-5.0.0.jar
+download=https://github.com/protegeproject/owlviz/releases/download/owlviz-5.0.0/owlviz-5.0.0.jar
 readme=https://github.com/protegeproject/owlviz/blob/master/README.md
 license=http://www.gnu.org/licenses/lgpl.html
 author=CO-ODE, The University of Manchester
