Update readme link

--- a/update-info/protege-4/update.properties
+++ b/update-info/protege-4/update.properties
@@ -2,6 +2,6 @@ name=OWLViz
 id=org.coode.owlviz
 version=4.1.5
 download=https://github.com/protegeproject/owlviz/releases/tag/org.coode.owlviz-4.1.5
-readme=https://github.com/protegeproject/owlviz/blob/master/etc/owlviz-readme.txt
+readme=https://raw.githubusercontent.com/protegeproject/owlviz/master/src/main/resources/readme.html
 license=http://www.gnu.org/licenses/lgpl.html
 author=CO-ODE, The University of Manchester
