--- a/update-info/protege-5/update.properties
+++ b/update-info/protege-5/update.properties
@@ -2,6 +2,6 @@ name=OWLViz
 id=owlviz
 version=5.0.0
 download=https://github.com/protegeproject/owlviz/releases/download/owlviz-5.0.0/owlviz-5.0.0.jar
-readme=https://github.com/protegeproject/owlviz/blob/master/README.md
+readme=https://raw.githubusercontent.com/protegeproject/owlviz/master/src/main/resources/readme.html
 license=http://www.gnu.org/licenses/lgpl.html
 author=CO-ODE, The University of Manchester
