--- a/update-info/protege-5/update.properties
+++ b/update-info/protege-5/update.properties
@@ -1,5 +1,5 @@
 name=OWLViz
-id=owlviz
+id=org.coode.owlviz
 version=5.0.1
 download=https://github.com/protegeproject/owlviz/releases/download/owlviz-5.0.1/owlviz-5.0.1.jar
 readme=https://raw.githubusercontent.com/protegeproject/owlviz/master/src/main/resources/readme.html
