Updated the Protege dependency to 5.0.0-RC1

--- a/pom.xml
+++ b/pom.xml
@@ -85,17 +85,17 @@
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>protege-common</artifactId>
-            <version>5.0.0-beta-19</version>
+            <version>5.0.0-RC1</version>
         </dependency>
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>protege-editor-core</artifactId>
-            <version>5.0.0-beta-19</version>
+            <version>5.0.0-RC1</version>
         </dependency>
         <dependency>
             <groupId>edu.stanford.protege</groupId>
             <artifactId>protege-editor-owl</artifactId>
-            <version>5.0.0-beta-19</version>
+            <version>5.0.0-RC1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
